Changed utils for get bulk devices using blkid_dev , for reliable device names

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,10 @@
     "typeindex": "cpp",
     "typeinfo": "cpp",
     "variant": "cpp",
-    "qmainwindow": "cpp"
+    "qmainwindow": "cpp",
+    "qlineedit": "cpp",
+    "qstandarditemmodel": "cpp",
+    "qapplication": "cpp",
+    "source_location": "cpp"
   }
 }
