--- a/meson.build
+++ b/meson.build
@@ -33,6 +33,7 @@ sources = [
     #'src/test.cpp',    
     #'src/console.cpp',
     'src/widgets/partitions_widget.cpp',
+    'src/widgets/accounts_widget.cpp',
     'src/ui.cpp',
     'src/commands.cpp',
     'src/utils.cpp'
