packages and network packages; ISO changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
     "qlineedit": "cpp",
     "qstandarditemmodel": "cpp",
     "qapplication": "cpp",
-    "source_location": "cpp"
+    "source_location": "cpp",
+    "qvboxlayout": "cpp"
   }
 }
