Initial attmpt at creating partition  filesystems

--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,7 @@ endif
 
 blkid_dep = dependency('blkid', required: true)
 libmount_dep = dependency('mount', required: true)
+qt6_dep = dependency('qt6', required: true, modules: ['Core', 'Gui', 'Widgets'])
 
 sources = [
     'src/install.cpp',
@@ -41,17 +42,16 @@ sources = [
 
 includes = include_directories('include')
 
+# qt6 wrangle
 moc_includes = ['include/ali/install.hpp',
                           'include/ali/widgets/install_widget.hpp'
                          ]
-
-
-qt6_dep = dependency('qt6', required: true, modules: ['Core', 'Gui', 'Widgets'])
 
 qt6 = import('qt6')
 moc_files = qt6.compile_moc( headers : moc_includes,
                                               include_directories: includes,
                                               dependencies: qt6_dep)
+
 
 executable( meson.project_name(),
             sources,
