First stab at locales

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
     "qvboxlayout": "cpp",
     "qfilesystemwatcher": "cpp",
     "filesystem": "cpp",
-    "qdebug": "cpp"
+    "qdebug": "cpp",
+    "qlabel": "cpp"
   }
 }
