Profiles using json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
     "qfilesystemwatcher": "cpp",
     "filesystem": "cpp",
     "qdebug": "cpp",
-    "qlabel": "cpp"
+    "qlabel": "cpp",
+    "qjsonobject": "cpp"
   }
 }
