Added additional packages to UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,9 @@
     "filesystem": "cpp",
     "qdebug": "cpp",
     "qlabel": "cpp",
-    "qjsonobject": "cpp"
+    "qjsonobject": "cpp",
+    "qnetworkreply": "cpp",
+    "barrier": "cpp",
+    "latch": "cpp"
   }
 }
